--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,6 @@
+* {
+  font-family: "Outfit", sans-serif;
+}
 .outer-div {
   height: 100vh;
   padding: 10%;
@@ -14,12 +17,20 @@
 
 .receipt-details {
   display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+  align-items: flex-start;
+  column-gap: 350px;
+  padding-bottom: 40px;
+  border-bottom: 1px solid #000;
+}
+.details-left,
+.details-right {
+  display: flex;
   flex-direction: column;
   row-gap: 10px;
-  background-color: rebeccapurple;
 }
 .order-details {
-  background-color: yellow;
 }
 .order-details table {
   margin-bottom: 15px;
@@ -29,9 +40,23 @@
   display: flex;
   flex-direction: row;
 }
+
+.footer {
+  display: flex;
+  margin-top: 40px;
+}
+
+th {
+  width: 150px;
+  text-align: left;
+  font-weight: bold !important;
+}
 p {
   margin: 0px;
 }
 .logo {
-  max-width: 10%;
+  max-width: 80px;
+  max-width: auto;
+  height: auto;
+  width: auto;
 }
